@@ -17,8 +17,9 @@ Here is the Swagger documentation:
 
 [Swagger endpoint](http://localhost:8080/swagger-ui/index.html)
 
-Endpoint ``/starts`` does two things, either it starts a new game or when a 2nd player wants to start a game he/she automatically joins an existing game which is in `WAITING` state that has been already created by another player.
+Endpoint POST ``/games`` does two things, either it starts a new game or when a 2nd player wants to start a game he/she automatically joins an existing game which is in `WAITING` state that has been already created by another player.
 Ideally it would be better to have an extra endpoint to `join` an existing game or create a new game, however for simplicity and due to time constraints that has been skipped.
+
 
 ## Tests
 
@@ -26,13 +27,24 @@ As many tests as possible have been tried to be put, however most important aspe
 
 Integration tests have the naming convention to end with `*IT.java` and unit tests have the naming convention to end with `*Test.java`.
 
-## Starting the application
-
-Initially, execute `./start-deps.sh` to initiate the dependencies. Subsequently, invoke `StartApplication` in the **test** package to launch the application with the `local` profile.
-
 When running tests, ensure that the docker dependencies are active by executing `./start-deps.sh`.
 
+## Starting the application
+
+Initially, execute `./start-deps.sh` to initiate the dependencies.
+
 To terminate the dependencies, use the command `./stop-deps.sh`.
+
+To run the application via Maven, run the following commands:
+```
+./mvnw clean install
+./mvnw spring-boot:run
+```
+To run the application locally via intelliJ, add these `VM Options` have to be added to the configuration:
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.time=ALL-UNNAMED
+```
 
 ## Tech Stack
 
@@ -51,3 +63,54 @@ To terminate the dependencies, use the command `./stop-deps.sh`.
 - Handling when a player gets disconnected
 - Players can have statistics of their wins/loses
 - Security for authenticating players
+
+## Sample outputs
+
+Here is the sample response when a game starts:
+```
+ {
+    "id": "5ff4b6b4-b246-4825-8ce8-6bc2aba847c7",
+    "playerOne": {
+        "id": "8e5585e6-9791-4e83-a779-71e54638707a",
+        "username": "king"
+    },
+    "playerTwo": null,
+    "status": "WAITING",
+    "lastMove": null,
+    "winner": null
+}
+```
+Here is the sample response when a player wins:
+
+```
+{
+    "id": "5ff4b6b4-b246-4825-8ce8-6bc2aba847c7",
+    "playerOne": {
+        "id": "8e5585e6-9791-4e83-a779-71e54638707a",
+        "username": "kooli"
+    },
+    "playerTwo": {
+        "id": "974f33df-8edc-4521-9ce8-9f770925d197",
+        "username": "king"
+    },
+    "status": "FINISHED",
+    "lastMove": {
+        "id": "da7da67b-6901-4a6e-9a57-afbf7c75981c",
+        "value": 1,
+        "currentResult": 1,
+        "player": {
+            "id": "974f33df-8edc-4521-9ce8-9f770925d197",
+            "username": "king"
+        },
+        "gameId": "5ff4b6b4-b246-4825-8ce8-6bc2aba847c7",
+        "timestamp": "2024-03-21T16:15:00.831830Z"
+    },
+    "winner": {
+        "id": "974f33df-8edc-4521-9ce8-9f770925d197",
+        "username": "king"
+    }
+}
+```
+Sample message sent via pusher:
+
+!["Widget"](./etc/pusher.png)
